towards FAIRer metadata through h5tbx and jsonld integration

--- a/docs/practical_examples/nexus.ipynb
+++ b/docs/practical_examples/nexus.ipynb
@@ -4455,7 +4455,7 @@
       "Expected fields: {'value': FieldInfo(annotation=str, required=True, metadata=[AfterValidator(func=<function parse_datetime at 0x000001BAC6845B80>)])}\n",
       "Pydantic error: 1 validation error for NexusTimeStampObject\n",
       "value\n",
-      "  Value error, time data '2008 10 23 15-09-39.175' does not match format '%Y-%m-%dT%H-%M-%S.%f' [type=value_error, input_value='2008 10 23 15-09-39.175', input_type=str]\n",
+      "  Parameter error, time data '2008 10 23 15-09-39.175' does not match format '%Y-%m-%dT%H-%M-%S.%f' [type=value_error, input_value='2008 10 23 15-09-39.175', input_type=str]\n",
       "    For further information visit https://errors.pydantic.dev/2.5/v/value_error\n"
      ]
     }
