--- a/docs/userguide/convention/working_with_conventions.ipynb
+++ b/docs/userguide/convention/working_with_conventions.ipynb
@@ -130,7 +130,7 @@
       "Validation of \"invalid\" for standard attribute \"units\" failed.\n",
       "Pydantic error: 1 validation error for units\n",
       "value\n",
-      "  Value error, Units cannot be understood using ureg package: invalid. Original error: 'invalid' is not defined in the unit registry [type=value_error, input_value='invalid', input_type=str]\n",
+      "  Parameter error, Units cannot be understood using ureg package: invalid. Original error: 'invalid' is not defined in the unit registry [type=value_error, input_value='invalid', input_type=str]\n",
       "    For further information visit https://errors.pydantic.dev/2.5/v/value_error\n"
      ]
     }
