--- a/docs/userguide/misc/identifiers.ipynb
+++ b/docs/userguide/misc/identifiers.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,10 +75,10 @@
        "<a href=\"https://orcid.org/0000-0001-8729-0482\"><img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />https://orcid.org/0000-0001-8729-0482</a>"
       ],
       "text/plain": [
-       "<h5rdmtoolbox.identifiers.ORCID at 0x240386c8ee0>"
+       "<h5rdmtoolbox.identifiers.ORCID at 0x245b53550a0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -127,10 +127,10 @@
        "<a href=\"https://ror.org/04wxnsj81\"><img alt=\"ROR logo\" src=\"https://raw.githubusercontent.com/ror-community/ror-logos/main/ror-icon-rgb.svg\" width=\"16\" height=\"16\" />https://ror.org/04wxnsj81</a>"
       ],
       "text/plain": [
-       "<h5rdmtoolbox.identifiers.RORID at 0x2404a8968b0>"
+       "<h5rdmtoolbox.identifiers.RORID at 0x245b48f14c0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -178,10 +178,10 @@
        "<a href=\"https://www.worldcat.org/isbn/80-85892-15-4\">80-85892-15-4</a>"
       ],
       "text/plain": [
-       "<h5rdmtoolbox.identifiers.ISBN10 at 0x2404a896580>"
+       "<h5rdmtoolbox.identifiers.ISBN10 at 0x245b53554c0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -222,10 +222,10 @@
        "<a href=\"https://www.worldcat.org/isbn/978-80-85892-15-4\">978-80-85892-15-4</a>"
       ],
       "text/plain": [
-       "<h5rdmtoolbox.identifiers.ISBN13 at 0x2404a7e62b0>"
+       "<h5rdmtoolbox.identifiers.ISBN13 at 0x245b53556a0>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
