--- a/docs/userguide/repository/zenodo.ipynb
+++ b/docs/userguide/repository/zenodo.ipynb
@@ -11,8 +11,8 @@
     "\n",
     "The class diagram below shows how they are constructed. First, an abstract zenodo interface class (`AbstractZenodoInterface`) is derived. From this, the concrete interface classes are derived.\n",
     "\n",
-    "<img src=\"../_static/repo_class_diagram.svg\"\n",
-    "     alt=\"../_static/repo_class_diagram.svg\"\n",
+    "<img src=\"../../_static/repo_class_diagram.svg\"\n",
+    "     alt=\"../../_static/repo_class_diagram.svg\"\n",
     "     style=\"margin-right: 10px; height: 500px;\" />\n",
     "     "
    ]
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "b001b211-4771-48b2-8a0f-0a0b75b3de01",
    "metadata": {},
    "outputs": [],
@@ -170,23 +170,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "500cb79c-76a4-4f3f-a84f-da36b1e63d5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['tmp0.hdf', 'tmp0.json']"
+       "{'tmp0.hdf': {'id': '15429441-0500-47d2-9372-c4ba177f2b65',\n",
+       "  'filename': 'tmp0.hdf',\n",
+       "  'filesize': 12288,\n",
+       "  'checksum': '75813cd2cb6812acd699cf667ee09a03',\n",
+       "  'links': {'self': 'https://sandbox.zenodo.org/api/deposit/depositions/34672/files/15429441-0500-47d2-9372-c4ba177f2b65',\n",
+       "   'download': 'https://sandbox.zenodo.org/api/records/34672/draft/files/tmp0.hdf/content'}},\n",
+       " 'tmp0.json': {'id': '82dfaf05-5fdb-4d4f-9f84-9eb7eae6d6a9',\n",
+       "  'filename': 'tmp0.json',\n",
+       "  'filesize': 338,\n",
+       "  'checksum': '84b0b00a0f0d7b7d2897d616dbbb6317',\n",
+       "  'links': {'self': 'https://sandbox.zenodo.org/api/deposit/depositions/34672/files/82dfaf05-5fdb-4d4f-9f84-9eb7eae6d6a9',\n",
+       "   'download': 'https://sandbox.zenodo.org/api/records/34672/draft/files/tmp0.json/content'}}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "repo.get_filenames()"
+    "repo.get_files()"
    ]
   },
   {
