--- a/docs/userguide/convention/creating_a_new_convention.ipynb
+++ b/docs/userguide/convention/creating_a_new_convention.ipynb
@@ -5,7 +5,7 @@
    "id": "29624350-5184-46eb-82b7-f99e36fd6493",
    "metadata": {},
    "source": [
-    "# 2. Creating a convention\n",
+    "# Creating a convention\n",
     "\n",
     "A convention can also be defined in a YAML (or JSON) file. It consists of three parts:\n",
     "\n",
