--- a/docs/userguide/convention/working_with_conventions.ipynb
+++ b/docs/userguide/convention/working_with_conventions.ipynb
@@ -5,7 +5,7 @@
    "id": "43a96960-2d31-4489-8582-b6ae07a4c133",
    "metadata": {},
    "source": [
-    "# Working a Convention\n",
+    "# Working with a Convention\n",
     "\n",
     "This section will take you through the steps of using, hence you are very likely a pure user in the project as defined before.\n",
     "\n",
