housekeeping and fixes

--- a/docs/userguide/convention/activate_a_convention.ipynb
+++ b/docs/userguide/convention/activate_a_convention.ipynb
@@ -5,7 +5,7 @@
    "id": "300ab6f1-dc08-41eb-9e77-5f6a8e02ac9a",
    "metadata": {},
    "source": [
-    "# Activating a Convention\n",
+    "# Activate a Convention\n",
     "\n",
     "This section will take you through the steps of activating a convention and find out about registered ones."
    ]
