--- a/docs/userguide/convention/ontologies.ipynb
+++ b/docs/userguide/convention/ontologies.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "5815196c-e3be-44d8-a1f8-07e563ce7dc2",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "01fcc4c6-c564-4094-a4d4-bf4a9985c477",
    "metadata": {},
    "outputs": [
@@ -259,17 +259,17 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--99391830200\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--99391830200\">\n",
+       "                        <input id=\"group-ds--9607245000\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--9607245000\">\n",
        "                        /<span>(3)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/test_dataset-99392605700\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/test_dataset-99392608500\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/test_dataset-99392608500\">test_dataset</label>\n",
+       "                <ul id=\"ds-1-/test_dataset-9607927100\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/test_dataset-9607929800\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/test_dataset-9607929800\">test_dataset</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -277,8 +277,8 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-grp-99392701300\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-grp-99392701300\">\n",
+       "                        <input id=\"group-ds-grp-9607993500\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-grp-9607993500\">\n",
        "                        grp<span>(1)</span></label>\n",
        "                  \n",
        "\n",
@@ -287,17 +287,17 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-Fan-99393068400\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-Fan-99393068400\">\n",
+       "                        <input id=\"group-ds-Fan-9608197900\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-Fan-9608197900\">\n",
        "                        Fan<span>(1)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/grp/Fan/D3-99393624600\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/grp/Fan/D3-99393627200\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
-       "                <label class='h5tb-varname' for=\"ds-2-/grp/Fan/D3-99393627200\">D3</label>\n",
+       "                <ul id=\"ds-1-/grp/Fan/D3-9608597800\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/grp/Fan/D3-9608600500\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
+       "                <label class='h5tb-varname' for=\"ds-2-/grp/Fan/D3-9608600500\">D3</label>\n",
        "                <span class=\"h5tb-dims\">300 [mm] (int32)</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name<a href=\"https://matthiasprobst.github.io/ssno/#standard_name\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"Image 1\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/ssno/#standard_name</span></a> : blade_diameter3</li><li style=\"list-style-type: none; font-style: italic\">units<a href=\"http://w3id.org/nfdi4ing/metadata4ing#hasUnits\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"Image 1\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">http://w3id.org/nfdi4ing/metadata4ing#hasUnits</span></a> : mm<a href=\"https://qudt.org/vocab/unit/MilliM\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"Image 1\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://qudt.org/vocab/unit/MilliM</span></a></li>\n",
        "                </ul>\n",
@@ -309,8 +309,8 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-h5rdmtoolbox-99394105400\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-h5rdmtoolbox-99394105400\">\n",
+       "                        <input id=\"group-ds-h5rdmtoolbox-9609363000\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-h5rdmtoolbox-9609363000\">\n",
        "                        h5rdmtoolbox<a href=\"https://schema.org/SoftwareSourceCode\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"Image 1\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">@type: https://schema.org/SoftwareSourceCode</span></a><span>(0)</span></label>\n",
        "                  \n",
        "\n",
@@ -337,7 +337,7 @@
     "    sub_grp = grp.create_group('Fan')\n",
     "    sub_grp.create_dataset('D3', data=300)\n",
     "    sub_grp['D3'].attrs['units', 'http://w3id.org/nfdi4ing/metadata4ing#hasUnits'] = 'mm'\n",
-    "    sub_grp['D3'].iri['units'].object = 'https://qudt.org/vocab/unit/MilliM'\n",
+    "    sub_grp['D3'].rdf['units'].object = 'https://qudt.org/vocab/unit/MilliM'\n",
     "    sub_grp['D3'].attrs['standard_name', 'https://matthiasprobst.github.io/ssno/#standard_name'] = 'blade_diameter3'\n",
     "    h5.dump(False)"
    ]
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "0e2765c8-79ec-4116-96cb-55ffca7d8ddc",
    "metadata": {},
    "outputs": [
@@ -371,19 +371,9 @@
       "    \"schema\": \"https://schema.org/\",\n",
       "    \"ssno\": \"https://matthiasprobst.github.io/ssno/#\"\n",
       "  },\n",
-      "  \"@graph\": [\n",
-      "    {\n",
-      "      \"@id\": \"N01764127b9e84ebba68d63a31c0f0019\",\n",
-      "      \"@type\": \"m4i:NumericalVariable\",\n",
-      "      \"m4i:hasUnits\": \"mm\",\n",
-      "      \"ssno:standard_name\": \"blade_diameter3\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"N52acd8bad4224b47a66ee5ccbdb2f71b\",\n",
-      "      \"@type\": \"schema:SoftwareSourceCode\",\n",
-      "      \"schema:softwareVersion\": \"1.2.3a1\"\n",
-      "    }\n",
-      "  ]\n",
+      "  \"@id\": \"Nac72eebdeae64a9a987a82ba05415796\",\n",
+      "  \"@type\": \"schema:SoftwareSourceCode\",\n",
+      "  \"schema:softwareVersion\": \"1.2.3a1\"\n",
       "}\n"
      ]
     }
@@ -391,7 +381,7 @@
    "source": [
     "print(h5tbx.jsonld.dumps(h5.hdf_filename,\n",
     "                         indent=2,\n",
-    "                         context={'schema': 'https://schema.org/',\n",
+    "                         context={'schema': 'http://schema.org/',\n",
     "                                  \"ssno\":  \"https://matthiasprobst.github.io/ssno/#\",\n",
     "                                  \"m4i\": \"http://w3id.org/nfdi4ing/metadata4ing#\"}))"
    ]
@@ -408,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "a36d5ec7-e7e5-4ead-9401-be05cf94552a",
    "metadata": {},
    "outputs": [
@@ -443,26 +433,26 @@
       "                                        \"@type\": \"hdf5:Attribute\",\n",
       "                                        \"hdf5:name\": \"standard_name\",\n",
       "                                        \"hdf5:value\": \"blade_diameter3\",\n",
-      "                                        \"@id\": \"Nf4a8abb7e83c4373850d4f789e113001\"\n",
+      "                                        \"@id\": \"N78eb05f18f334eee8d73d92c6acda086\"\n",
       "                                    },\n",
       "                                    {\n",
       "                                        \"@type\": \"hdf5:Attribute\",\n",
       "                                        \"hdf5:name\": \"units\",\n",
       "                                        \"hdf5:value\": \"mm\",\n",
-      "                                        \"@id\": \"N274102c3e7a444a7b6960c8258c52ebb\"\n",
+      "                                        \"@id\": \"N377555f14e13423b8b7a9ed32d58371d\"\n",
       "                                    }\n",
       "                                ],\n",
       "                                \"hdf5:name\": \"/grp/Fan/D3\",\n",
       "                                \"hdf5:size\": \"1\",\n",
       "                                \"hdf5:datatype\": \"H5T_INTEGER\",\n",
       "                                \"hdf5:value\": \"300.0\",\n",
-      "                                \"@id\": \"N13c05557e8584982aab322cc8a6ee7ae\"\n",
+      "                                \"@id\": \"Na9d6a822e2a247bb97051166c46189d5\"\n",
       "                            }\n",
       "                        ],\n",
-      "                        \"@id\": \"Nb32f88b51db64a5d9ddcdb4ebadbf893\"\n",
+      "                        \"@id\": \"N6d91882c169f4a4f870e914b7c7f1b45\"\n",
       "                    }\n",
       "                ],\n",
-      "                \"@id\": \"N08168f972c4a4bf59dc5b0c18b3a2dd3\"\n",
+      "                \"@id\": \"Nea272d783ea74e389297d75a681685f7\"\n",
       "            },\n",
       "            {\n",
       "                \"@type\": \"hdf5:Group\",\n",
@@ -471,17 +461,17 @@
       "                        \"@type\": \"hdf5:Attribute\",\n",
       "                        \"hdf5:name\": \"@type\",\n",
       "                        \"hdf5:value\": \"https://schema.org/SoftwareSourceCode\",\n",
-      "                        \"@id\": \"N690e16d7954d4e22979190dc35a3ef30\"\n",
+      "                        \"@id\": \"N0a69b01d667b45b28a31173be6c7cfd4\"\n",
       "                    },\n",
       "                    {\n",
       "                        \"@type\": \"hdf5:Attribute\",\n",
       "                        \"hdf5:name\": \"__h5rdmtoolbox_version__\",\n",
       "                        \"hdf5:value\": \"1.2.3a1\",\n",
-      "                        \"@id\": \"N835d6c13eed543c48ea20a7fc19ef8d7\"\n",
+      "                        \"@id\": \"Naf0e8f9a7b984740bf40a63ca274861a\"\n",
       "                    }\n",
       "                ],\n",
       "                \"hdf5:name\": \"/h5rdmtoolbox\",\n",
-      "                \"@id\": \"Ne5ae2e5799194deba5f8530fd3a139ce\"\n",
+      "                \"@id\": \"Nda8c2fc741784bb2a478eb9a9005936a\"\n",
       "            },\n",
       "            {\n",
       "                \"@type\": \"hdf5:Dataset\",\n",
@@ -493,12 +483,12 @@
       "                    0.0,\n",
       "                    0.0\n",
       "                ],\n",
-      "                \"@id\": \"N29d700fdba564e0d82b972a663905083\"\n",
+      "                \"@id\": \"N0bc7f4e0a14a4de09b5f392ed2b2fd86\"\n",
       "            }\n",
       "        ],\n",
-      "        \"@id\": \"N183901d342ab41088f1f5e1d4339aded\"\n",
+      "        \"@id\": \"N11198fb940ea448bb726521bad23d4cc\"\n",
       "    },\n",
-      "    \"@id\": \"N3d6bc2c8ee764ecbac9d812a675fe085\"\n",
+      "    \"@id\": \"Nf75fc3dea8a4428392eff9bf653a2675\"\n",
       "}\n"
      ]
     }
@@ -520,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "254527e3-6229-4887-9666-9dc3921aab58",
    "metadata": {},
    "outputs": [],
@@ -539,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "177fe328-d61e-444c-9b2e-d4678142bff2",
    "metadata": {},
    "outputs": [],
@@ -552,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "1a066906-ac07-4b45-b1aa-2babbf1a4522",
    "metadata": {},
    "outputs": [
@@ -572,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "16d0a2b3-74c6-4b52-9f59-014b8e2a3158",
    "metadata": {},
    "outputs": [
@@ -622,7 +612,7 @@
        "1  /test_dataset       3"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
