simplification: one logger for all

--- a/docs/userguide/convention/ontologies.ipynb
+++ b/docs/userguide/convention/ontologies.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "01fcc4c6-c564-4094-a4d4-bf4a9985c477",
    "metadata": {},
    "outputs": [
@@ -259,17 +259,17 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--9607245000\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--9607245000\">\n",
+       "                        <input id=\"group-ds--4745066700\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4745066700\">\n",
        "                        /<span>(3)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/test_dataset-9607927100\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/test_dataset-9607929800\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/test_dataset-9607929800\">test_dataset</label>\n",
+       "                <ul id=\"ds-1-/test_dataset-4746717100\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/test_dataset-4746719800\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/test_dataset-4746719800\">test_dataset</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -277,8 +277,8 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-grp-9607993500\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-grp-9607993500\">\n",
+       "                        <input id=\"group-ds-grp-4746789000\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-grp-4746789000\">\n",
        "                        grp<span>(1)</span></label>\n",
        "                  \n",
        "\n",
@@ -287,17 +287,17 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-Fan-9608197900\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-Fan-9608197900\">\n",
+       "                        <input id=\"group-ds-Fan-4746994900\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-Fan-4746994900\">\n",
        "                        Fan<span>(1)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/grp/Fan/D3-9608597800\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/grp/Fan/D3-9608600500\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
-       "                <label class='h5tb-varname' for=\"ds-2-/grp/Fan/D3-9608600500\">D3</label>\n",
+       "                <ul id=\"ds-1-/grp/Fan/D3-4747409300\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/grp/Fan/D3-4747411700\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
+       "                <label class='h5tb-varname' for=\"ds-2-/grp/Fan/D3-4747411700\">D3</label>\n",
        "                <span class=\"h5tb-dims\">300 [mm] (int32)</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name<a href=\"https://matthiasprobst.github.io/ssno/#standard_name\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"Image 1\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/ssno/#standard_name</span></a> : blade_diameter3</li><li style=\"list-style-type: none; font-style: italic\">units<a href=\"http://w3id.org/nfdi4ing/metadata4ing#hasUnits\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"Image 1\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">http://w3id.org/nfdi4ing/metadata4ing#hasUnits</span></a> : mm<a href=\"https://qudt.org/vocab/unit/MilliM\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"Image 1\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://qudt.org/vocab/unit/MilliM</span></a></li>\n",
        "                </ul>\n",
@@ -309,8 +309,8 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-h5rdmtoolbox-9609363000\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-h5rdmtoolbox-9609363000\">\n",
+       "                        <input id=\"group-ds-h5rdmtoolbox-4748064300\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-h5rdmtoolbox-4748064300\">\n",
        "                        h5rdmtoolbox<a href=\"https://schema.org/SoftwareSourceCode\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"Image 1\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">@type: https://schema.org/SoftwareSourceCode</span></a><span>(0)</span></label>\n",
        "                  \n",
        "\n",
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "0e2765c8-79ec-4116-96cb-55ffca7d8ddc",
    "metadata": {},
    "outputs": [
@@ -371,9 +371,19 @@
       "    \"schema\": \"https://schema.org/\",\n",
       "    \"ssno\": \"https://matthiasprobst.github.io/ssno/#\"\n",
       "  },\n",
-      "  \"@id\": \"Nac72eebdeae64a9a987a82ba05415796\",\n",
-      "  \"@type\": \"schema:SoftwareSourceCode\",\n",
-      "  \"schema:softwareVersion\": \"1.2.3a1\"\n",
+      "  \"@graph\": [\n",
+      "    {\n",
+      "      \"@id\": \"N885ebb2936a842afa97f1254e8bb470c\",\n",
+      "      \"@type\": \"m4i:NumericalVariable\",\n",
+      "      \"m4i:hasUnits\": \"mm\",\n",
+      "      \"ssno:standard_name\": \"blade_diameter3\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"@id\": \"Nd66297f14af7450cab06e2e709b19a74\",\n",
+      "      \"@type\": \"schema:SoftwareSourceCode\",\n",
+      "      \"schema:softwareVersion\": \"1.2.3a1\"\n",
+      "    }\n",
+      "  ]\n",
       "}\n"
      ]
     }
@@ -398,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a36d5ec7-e7e5-4ead-9401-be05cf94552a",
    "metadata": {},
    "outputs": [
@@ -433,26 +443,26 @@
       "                                        \"@type\": \"hdf5:Attribute\",\n",
       "                                        \"hdf5:name\": \"standard_name\",\n",
       "                                        \"hdf5:value\": \"blade_diameter3\",\n",
-      "                                        \"@id\": \"N78eb05f18f334eee8d73d92c6acda086\"\n",
+      "                                        \"@id\": \"N58dfe4972fb84ebe8b4983aaa6abfd08\"\n",
       "                                    },\n",
       "                                    {\n",
       "                                        \"@type\": \"hdf5:Attribute\",\n",
       "                                        \"hdf5:name\": \"units\",\n",
       "                                        \"hdf5:value\": \"mm\",\n",
-      "                                        \"@id\": \"N377555f14e13423b8b7a9ed32d58371d\"\n",
+      "                                        \"@id\": \"N8f3ec5851e37420daa49695d7d3262ba\"\n",
       "                                    }\n",
       "                                ],\n",
       "                                \"hdf5:name\": \"/grp/Fan/D3\",\n",
       "                                \"hdf5:size\": \"1\",\n",
       "                                \"hdf5:datatype\": \"H5T_INTEGER\",\n",
       "                                \"hdf5:value\": \"300.0\",\n",
-      "                                \"@id\": \"Na9d6a822e2a247bb97051166c46189d5\"\n",
+      "                                \"@id\": \"N4b78896f37264cd693e42918c16a1ff7\"\n",
       "                            }\n",
       "                        ],\n",
-      "                        \"@id\": \"N6d91882c169f4a4f870e914b7c7f1b45\"\n",
+      "                        \"@id\": \"Na0a64089b2d3444daf486540875947f6\"\n",
       "                    }\n",
       "                ],\n",
-      "                \"@id\": \"Nea272d783ea74e389297d75a681685f7\"\n",
+      "                \"@id\": \"Nb03d25dbdce64af6b5d9e421d8a22206\"\n",
       "            },\n",
       "            {\n",
       "                \"@type\": \"hdf5:Group\",\n",
@@ -461,17 +471,17 @@
       "                        \"@type\": \"hdf5:Attribute\",\n",
       "                        \"hdf5:name\": \"@type\",\n",
       "                        \"hdf5:value\": \"https://schema.org/SoftwareSourceCode\",\n",
-      "                        \"@id\": \"N0a69b01d667b45b28a31173be6c7cfd4\"\n",
+      "                        \"@id\": \"N5a3a9c6a34ca411e8827f21d35950613\"\n",
       "                    },\n",
       "                    {\n",
       "                        \"@type\": \"hdf5:Attribute\",\n",
       "                        \"hdf5:name\": \"__h5rdmtoolbox_version__\",\n",
       "                        \"hdf5:value\": \"1.2.3a1\",\n",
-      "                        \"@id\": \"Naf0e8f9a7b984740bf40a63ca274861a\"\n",
+      "                        \"@id\": \"Nbbfd345b523e486f9eb6ef7322620893\"\n",
       "                    }\n",
       "                ],\n",
       "                \"hdf5:name\": \"/h5rdmtoolbox\",\n",
-      "                \"@id\": \"Nda8c2fc741784bb2a478eb9a9005936a\"\n",
+      "                \"@id\": \"N918459719168479f9a8d34c7dd8daa89\"\n",
       "            },\n",
       "            {\n",
       "                \"@type\": \"hdf5:Dataset\",\n",
@@ -483,12 +493,12 @@
       "                    0.0,\n",
       "                    0.0\n",
       "                ],\n",
-      "                \"@id\": \"N0bc7f4e0a14a4de09b5f392ed2b2fd86\"\n",
+      "                \"@id\": \"N9ef53ab691c34e738d83d0934516410b\"\n",
       "            }\n",
       "        ],\n",
-      "        \"@id\": \"N11198fb940ea448bb726521bad23d4cc\"\n",
+      "        \"@id\": \"N3819e75a977a435297ef551b6a472c0b\"\n",
       "    },\n",
-      "    \"@id\": \"Nf75fc3dea8a4428392eff9bf653a2675\"\n",
+      "    \"@id\": \"N4b0870f259344fa482ca434b995a6269\"\n",
       "}\n"
      ]
     }
@@ -510,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "254527e3-6229-4887-9666-9dc3921aab58",
    "metadata": {},
    "outputs": [],
@@ -529,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "177fe328-d61e-444c-9b2e-d4678142bff2",
    "metadata": {},
    "outputs": [],
@@ -542,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "1a066906-ac07-4b45-b1aa-2babbf1a4522",
    "metadata": {},
    "outputs": [
@@ -562,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "16d0a2b3-74c6-4b52-9f59-014b8e2a3158",
    "metadata": {},
    "outputs": [
@@ -612,7 +622,7 @@
        "1  /test_dataset       3"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
