housekeeping, fixed minor bugs, updated docs

--- a/docs/userguide/repository/zenodo.ipynb
+++ b/docs/userguide/repository/zenodo.ipynb
@@ -29,10 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "b001b211-4771-48b2-8a0f-0a0b75b3de01",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to import module h5tbx\n"
+     ]
+    }
+   ],
    "source": [
     "from h5rdmtoolbox.repository import zenodo\n",
     "import h5rdmtoolbox as h5tbx"
@@ -142,22 +150,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "3cb86303-0e65-41fc-a622-710bc5fe8f7a",
+   "execution_count": 13,
+   "id": "194e3285-6617-422e-93ed-12108e24dec3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from h5rdmtoolbox.repository.h5metamapper import hdf2json"
+    "import pathlib\n",
+    "from h5rdmtoolbox import jsonld\n",
+    "class HDF_to_JSONLD:\n",
+    "    def __init__(self, skipND):\n",
+    "        self.skipND = skipND\n",
+    "        \n",
+    "    def __call__(self, hdf_filename):\n",
+    "        json_filename = pathlib.Path(hdf_filename).with_suffix('.json')\n",
+    "        with open(json_filename, 'w') as f:\n",
+    "            f.write(jsonld.dump_file(hdf_filename, skipND=self.skipND))\n",
+    "        return json_filename"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "9bc60428-785f-41aa-a356-2114e0d183ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\repository\\zenodo\\core.py:325: UserWarning: Filename \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_4\\tmp0.hdf\" already exists in deposit. Skipping...\"\n",
+      "  warnings.warn(f'Filename \"{filename}\" already exists in deposit. Skipping...\"', UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
-    "repo.upload_hdf_file(filename, metamapper=hdf2json)"
+    "repo.upload_hdf_file(filename, metamapper=HDF_to_JSONLD(1))"
    ]
   },
   {
@@ -170,34 +197,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "500cb79c-76a4-4f3f-a84f-da36b1e63d5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'tmp0.hdf': {'id': '15429441-0500-47d2-9372-c4ba177f2b65',\n",
+       "{'tmp0.hdf': {'id': 'b0fd97a9-8a6d-4fab-b7f3-6f7903f2926f',\n",
        "  'filename': 'tmp0.hdf',\n",
-       "  'filesize': 12288,\n",
-       "  'checksum': '75813cd2cb6812acd699cf667ee09a03',\n",
-       "  'links': {'self': 'https://sandbox.zenodo.org/api/deposit/depositions/34672/files/15429441-0500-47d2-9372-c4ba177f2b65',\n",
-       "   'download': 'https://sandbox.zenodo.org/api/records/34672/draft/files/tmp0.hdf/content'}},\n",
-       " 'tmp0.json': {'id': '82dfaf05-5fdb-4d4f-9f84-9eb7eae6d6a9',\n",
+       "  'filesize': 12384,\n",
+       "  'checksum': '02d007d9b6d35f7b35a7b47a30c4efa1',\n",
+       "  'links': {'self': 'https://sandbox.zenodo.org/api/deposit/depositions/38652/files/b0fd97a9-8a6d-4fab-b7f3-6f7903f2926f',\n",
+       "   'download': 'https://sandbox.zenodo.org/api/records/38652/draft/files/tmp0.hdf/content'}},\n",
+       " 'tmp0.json': {'id': '6910f6b4-120f-4e66-877e-e1427c9d5dd3',\n",
        "  'filename': 'tmp0.json',\n",
-       "  'filesize': 338,\n",
-       "  'checksum': '84b0b00a0f0d7b7d2897d616dbbb6317',\n",
-       "  'links': {'self': 'https://sandbox.zenodo.org/api/deposit/depositions/34672/files/82dfaf05-5fdb-4d4f-9f84-9eb7eae6d6a9',\n",
-       "   'download': 'https://sandbox.zenodo.org/api/records/34672/draft/files/tmp0.json/content'}}}"
+       "  'filesize': 1879,\n",
+       "  'checksum': '9e0e31878c459bb61755b3026b3fb2ce',\n",
+       "  'links': {'self': 'https://sandbox.zenodo.org/api/deposit/depositions/38652/files/6910f6b4-120f-4e66-877e-e1427c9d5dd3',\n",
+       "   'download': 'https://sandbox.zenodo.org/api/records/38652/draft/files/tmp0.json/content'}}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "repo.get_files()"
+    "repo.get_filenames()"
    ]
   },
   {
