housekeeping and doc updates

--- a/docs/userguide/misc/identifiers.ipynb
+++ b/docs/userguide/misc/identifiers.ipynb
@@ -21,7 +21,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to import module h5tbx\n"
+     ]
+    }
+   ],
    "source": [
     "from h5rdmtoolbox import identifiers"
    ]
@@ -75,7 +83,7 @@
        "<a href=\"https://orcid.org/0000-0001-8729-0482\"><img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />https://orcid.org/0000-0001-8729-0482</a>"
       ],
       "text/plain": [
-       "<h5rdmtoolbox.identifiers.ORCID at 0x245b53550a0>"
+       "<h5rdmtoolbox.identifiers.ORCID at 0x1d1887e0730>"
       ]
      },
      "execution_count": 3,
@@ -127,7 +135,7 @@
        "<a href=\"https://ror.org/04wxnsj81\"><img alt=\"ROR logo\" src=\"https://raw.githubusercontent.com/ror-community/ror-logos/main/ror-icon-rgb.svg\" width=\"16\" height=\"16\" />https://ror.org/04wxnsj81</a>"
       ],
       "text/plain": [
-       "<h5rdmtoolbox.identifiers.RORID at 0x245b48f14c0>"
+       "<h5rdmtoolbox.identifiers.RORID at 0x1d1887e0760>"
       ]
      },
      "execution_count": 5,
@@ -178,7 +186,7 @@
        "<a href=\"https://www.worldcat.org/isbn/80-85892-15-4\">80-85892-15-4</a>"
       ],
       "text/plain": [
-       "<h5rdmtoolbox.identifiers.ISBN10 at 0x245b53554c0>"
+       "<h5rdmtoolbox.identifiers.ISBN10 at 0x1d1887e04c0>"
       ]
      },
      "execution_count": 7,
@@ -222,7 +230,7 @@
        "<a href=\"https://www.worldcat.org/isbn/978-80-85892-15-4\">978-80-85892-15-4</a>"
       ],
       "text/plain": [
-       "<h5rdmtoolbox.identifiers.ISBN13 at 0x245b53556a0>"
+       "<h5rdmtoolbox.identifiers.ISBN13 at 0x1d1887e0df0>"
       ]
      },
      "execution_count": 9,
